--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,11 @@
 				<directory>lib</directory>
 			</resource>
 		</resources>
-		<testResources>
+<!-- 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
 			</testResource>
-		</testResources>
+		</testResources> -->
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
