--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 	</dependency>
     
     <dependency>
+	    <groupId>io.vertx</groupId>
+	    <artifactId>vertx-core</artifactId>
+	    <version>3.7.1</version>
+	</dependency>
+    
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
